fix:Data-JDBC. Подключил Predicate в метод CustomCarPartRepositoryDataJdbc.findAll()